codexlb/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codexlb
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: codexlb
  template:
    metadata:
      labels:
        app: codexlb
    spec:
      containers:
        - name: codexlb
          image: ghcr.io/aafqaq/codex-lb-enhanced:latest
          ports:
            - containerPort: 2455
          volumeMounts:
            - mountPath: /var/lib/codex-lb
              name: codexlb-pvc
      volumes:
        - name: codexlb-pvc
          persistentVolumeClaim:
            claimName: codexlb-pvc
